fix(theme): update focus z-index

--- a/packages/react/src/theme/src/styles/_mixins.scss
+++ b/packages/react/src/theme/src/styles/_mixins.scss
@@ -15,7 +15,7 @@
   $width: 2px
 ) {
   &#{$target} {
-    z-index: 1;
+    z-index: 10 !important;
     outline: $width solid $color;
     outline-offset: $offset;
 
